# typical

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  README.rst  TODO.rst
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  typical.rst  typical.tests.rst  usage.rst
tests/: __init__.py  test_cli.py  test_numeric.py  test_optimization.py  test_plottable.py
typical/: __init__.py  cli.py  generic.py  iterable.py  numeric.py  optimization.py  plottable.py  symbolic.py  typical.py
typical/tests/: test_cli.py  test_generic.py  test_iterable.py  test_numeric.py  test_optimization.py  test_plottable.py  test_symbolic.py  test_types.py
